Added basic info to metadata

--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -1,4 +1,5 @@
 .container {
+    padding-top: 1.5em;
     background: darkgreen;
 
     div {
@@ -25,4 +26,6 @@
     padding: 1em;
     width: 100%;
     text-align: center;
+    font-size: 12px;
+    font-weight: 200;
 }
