--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -7,6 +7,12 @@
             h4 {
                 color: #ddd;
             }
+
+            ul {
+                li {
+                    color: #ddd;
+                }
+            }
         }
 
         p {
