--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -46,7 +46,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
     border-color: $base-font-colour;
     border-width: thin;
     padding: .75em;
-    padding-bottom: .15em;
+    padding-bottom: 0;
     background-color: lightblue;
 
     &:hover {
