Updated footer background color

--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -1,6 +1,7 @@
 .container {
     padding-top: 1.5em;
-    background: darkgreen;
+    border-top: .1em #ddd;
+    background: #052517;
 
     div {
         div {
