--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -16,7 +16,10 @@ and (-webkit-min-device-pixel-ratio: 2) {
 }
 
 .logo {
-    margin-right: 2em;
+    max-height: 150px;
+    max-width: 150px;
+    position: relative;
+    z-index: inherit;
 
     &:hover {
         text-decoration: none;
@@ -25,6 +28,8 @@ and (-webkit-min-device-pixel-ratio: 2) {
 
 .page-links {
     color: $base-font-colour;
+    margin-left: .5em;
+    margin-right: .5em;
 
     &:hover {
         text-decoration: none;
@@ -41,12 +46,13 @@ and (-webkit-min-device-pixel-ratio: 2) {
 }
 
 .phone-button {
+    max-width: 250px;
+    max-height: 60px;
     font-weight: bold;
     border-radius: 25px;
     border-color: $base-font-colour;
     border-width: thin;
-    padding: .75em;
-    padding-bottom: 0;
+    padding: .2em;
     background-color: lightblue;
 
     &:hover {
