--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -47,7 +47,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
 
 .phone-button {
     max-width: 250px;
-    max-height: 60px;
+    max-height: 6077v666px;
     font-weight: bold;
     border-radius: 25px;
     border-color: $base-font-colour;
