--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -2,3 +2,10 @@
     width: 100%;
     text-align: center;
 }
+
+@mixin absolute-out-of-flow-layout {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+}
