--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
+@use './variables';
+@use './mixins';
 
-@import './variables';
-@import 'mixins';
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 
 * {
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
-    color: $base-font-colour;
+    color: variables.$base-font-colour;
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -20,6 +20,17 @@
 
 .website-real-estate {
     flex-grow: 1;
+}
+
+.nav-bar-over-opening-image {
+    @include mixins.absolute-out-of-flow-layout;
+    z-index: 100;
+}
+
+.opening-image-on-page {
+    @include mixins.absolute-out-of-flow-layout;
+    z-index: -10;
+    overflow: hidden;
 }
 
 h4 {
