--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 @mixin center-item {
     width: 100%;
     text-align: center;
@@ -8,4 +10,11 @@
     top: 0;
     left: 0;
     right: 0;
+}
+
+@mixin attention-text-large {
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 40px;
+    color: $lighter-font-colour;
 }
