Added embedded google maps to home page. Also connected to Contenful API

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,5 @@
-$base-font-colour: #303030;
+$base-font-colour: black;
 $lighter-font-colour: white;
 $light-font-colour: #ccc;
 $background-colour: #052517;
+$light-background-colour: #e3fbe3;
