--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,7 +16,14 @@ body, html {
     overflow-x: hidden;
     overflow-y: scroll;
     overscroll-behavior: contain;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
     position: fixed;
+}
+
+body::-webkit-scrollbar,
+html::-webkit-scrollbar {
+    display: none;
 }
 
 .layout-content-order {
