--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -58,6 +58,23 @@ h1, h2, h3, h4, h5, p {
     height: 100vh;
 }
 
+.heading-container {
+    height: 30vh;
+    background-color: $light-background-colour;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: -20%;
+    z-index: 1;
+}
+
+hr.decorative-line {
+    z-index: 2;
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
 .first-opening-phrase {
     @include attention-text-large;
     animation-name: fade-in-from-left;
@@ -80,6 +97,22 @@ h1, h2, h3, h4, h5, p {
     opacity: 0;
     max-width: 20ch;
     text-align: left;
+}
+
+.heading {
+    font-weight: bold;
+    font-size: 2.5em;
+    padding: 2rem;
+}
+
+.map {
+    position: relative;
+    top: 39%;
+    width: 100vw;
+    height: 65vh;
+    justify-self: center;
+    z-index: -5;
+    border: 0;
 }
 
 @keyframes fade-in-from-left {
