--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,12 @@
+// Colours
 $base-font-colour: black;
 $lighter-font-colour: white;
 $light-font-colour: #ccc;
 $background-colour: #052517;
 $light-background-colour: #e3fbe3;
+$font-highlight-colour: #008000;
+
+// Animation for onHover Elements
+$duration: 200ms;
+$distance: 8px;
+$easeOutBack: cubic-bezier(0.175, 0.885, 0.320, 1.275);
