--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,7 @@
 
 body, html {
     height: 100vh;
+    width: 100vw;
     overflow-x: hidden;
     overflow-y: scroll;
     overscroll-behavior: contain;
