added more foundational stylings for layouts on home page

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -19,3 +19,9 @@
     color: $lighter-font-colour;
     margin-top: 1em;
 }
+
+@mixin four-item-columned-grid {
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+}
