--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -93,6 +93,7 @@ h1, h2, h3, h4, h5, p {
     min-height: 40vh;
 
     h5 {
+        margin-top: 2em;
         text-align: center;
     }
 
@@ -137,17 +138,63 @@ h1, h2, h3, h4, h5, p {
 }
 
 .portfolio-gallery {
-    @include responsive-grid(320px);
+    @include responsive-grid(400px);
 }
 
 .portfolio-item {
     position: relative;
-    width: 320px;
+    width: 100%;
 }
 
 .portfolio-item-image {
     display: block;
     width: 100%;
+}
+
+.portfolio-item-image-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0 , 0, 0.6);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 250ms;
+
+    & > * {
+        transform: translateY(20px);
+        transition: transform 250ms;
+    }
+
+    &:hover > * {
+        transform: translateY(0);
+    }
+
+    &:hover {
+        opacity: 1;
+    }
+
+    h4, p {
+        color: white;
+    }
+
+    h4 {
+        letter-spacing: .2rem;
+    }
+}
+
+.portfolio-item-title {
+    font-size: 2em;
+    font-weight: bold;
+}
+
+.portfolio-item-location {
+    font-size: 1.25em;
+    margin-top: .25em;
 }
 
 // below is just to test out grid layout for portfolio
