--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -41,3 +41,11 @@ html::-webkit-scrollbar {
 h4 {
     font-weight: bold;
 }
+
+button {
+    font-size: 100%;
+    font-family: inherit;
+    border: 0;
+    padding: 0;
+    background: none;
+}
