Figuring out displaying images for service cards. Also updated content/text.js file to clean up code

--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -117,11 +117,13 @@ h1, h2, h3, h4, h5, p {
     h5 {
         margin-top: 2em;
         text-align: center;
+        font-weight: bold;
     }
 
     p {
         max-width: 40ch;
         text-align: center;
+        font-size: .9em;
     }
 }
 
