Added a button on footer to bring users back to top of the page and turned all react icons white

--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -59,10 +59,6 @@ div {
     justify-content: space-around;
 }
 
-.footer-icons {
-    color: #ddd;
-}
-
 .copyright-container {
     display: flex;
     justify-content: center;
@@ -79,4 +75,10 @@ div {
 
 .info-space {
     margin-top: 2em;
+}
+
+.top-button-container {
+    display: flex;
+    align-content: center;
+    justify-content: center;
 }
