--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -1,6 +1,7 @@
 @import 'mixins';
 @import './variables';
 
+/* For tablets and smaller screened laptops */
 @media only screen and (max-width: 1100px) {
     h1, h2, h3, h4, h5, p {
         padding: 1em;
@@ -24,6 +25,7 @@
     }
 }
 
+/* For mobile phones */
 @media only screen and (min-width: 600px) {
 
 }
