Started the congtact form, also started added styling to media queries for other devices

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -32,3 +32,9 @@
     align-items: center;
     grid-template-columns: repeat(auto-fit, minmax($item-width, 1fr));
 }
+
+@mixin responsive-flex-box {
+    display: flex !important;
+    flex-wrap: wrap;
+    justify-content: center;
+}
