--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,6 +6,12 @@ $background-colour: #052517;
 $light-background-colour: #e3fbe3;
 $font-highlight-colour: #008000;
 
+// Form
+$label-colour: rgba(225, 225, 225, 0.8);
+$form-background-colour: rgba(0, 0, 0, .7);
+$error-colour: rgba(250, 110, 110, .9);
+$button-colour: rgba(240, 240, 240, .9);
+
 // Animation for onHover Elements
 $duration: 200ms;
 $distance: 8px;
