--- a/src/styles/contactForm.module.scss
+++ b/src/styles/contactForm.module.scss
@@ -3,7 +3,9 @@
 
 @media only screen and (max-width: 1100px) {
     .contact-form-layout {
-        width: 95%;
+        width: 100%;
+        padding-left: .5em;
+        padding-right: .5em;
     }
 }
 
@@ -13,25 +15,71 @@
     }
 }
 
+label {
+    color: $label-colour;
+}
+
 .contact-form-layout {
     z-index: 12;
-    background-color: grey;
+    background: rgb(0,0,0);
+    background: linear-gradient(180deg, rgba(0,0,0,0.97) 0%, rgba(36,37,37,0.8533788515406162) 100%);
+    border: 18px outset rgba(249, 249, 249, .4);
+    background-clip: padding-box;
     display: flex;
     flex-direction: column;
-    width: 600px;
+    width: 900px;
+    padding: 1.5em;
+    padding-top: 1.5em;
+    padding-bottom: 1.5em;
+
+    h2 {
+        color: $label-colour;
+        font-size: 1.75em;
+        font-weight: lighter;
+    }
 }
 
 .inner-form-layout {
+    padding: .5em;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    
+
+    div {
+
+        h4, p {
+            color: $label-colour;
+        }
+
+        p {
+            font-size: .9em;
+            font-weight: lighter;
+            margin: .25em 0;
+        }
+    }
+}
+
+.company-name {
+    font-weight: bold;
+    font-size: 1.25em;
+    margin-bottom: .5em;
 }
 
 .form-item-layout {
+    flex-basis: 50%;
     display: flex;
     flex-direction: column;
-    padding: 1em;
+    padding: .5em;
+}
+
+.contact-message {
+    flex-basis: 50%;
+    padding: .5em;
+    padding-left: 0;
+}
+
+.contact-blurb {
+    margin-top: 4em;
 }
 
 .form-content {
@@ -41,11 +89,44 @@
 .form-item {
     display: flex;
     flex-direction: column;
-    margin-top: .1em;
-    margin-bottom: .1em;
+    margin-bottom: .5em;
+}
+
+.hr-line {
+    background-color: $label-colour;
+    border: 0;
+    clear: both;
+    display: block;
+    width: 99%;
+    height: 2px;
+}
+
+.submit-button {
+    margin-top: .75em;
+    display: flex;
+    align-self: flex-end;
+    background-color: $button-colour;
+    text-transform: uppercase;
+    letter-spacing: .05em;
+    width: fit-content;
+    border-radius: 5px;
+    padding: .5em;
+
+    &:hover {
+        opacity: .6;
+    }
+
+    &:active {
+        outline: 0;
+        opacity: .8;
+    }
+
+    &:focus {
+        outline: 0;
+    }
 }
 
 .error-text {
-    color: red;
+    color: $error-colour;
     opacity: .6;
 }
