--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,12 +5,13 @@ $light-font-colour: #ccc;
 $background-colour: #052517;
 $light-background-colour: #e3fbe3;
 $font-highlight-colour: #008000;
+$header-background-colour: rgba(158, 156, 156, 0.8);
 
 // Form
 $label-colour: rgba(225, 225, 225, 0.8);
-$form-background-colour: rgba(0, 0, 0, .7);
-$error-colour: rgba(250, 110, 110, .9);
-$button-colour: rgba(240, 240, 240, .9);
+$form-background-colour: rgba(0, 0, 0, 0.7);
+$error-colour: rgba(250, 110, 110, 0.9);
+$button-colour: rgba(240, 240, 240, 0.9);
 
 // Animation for onHover Elements
 $duration: 200ms;
