--- a/src/styles/contactForm.module.scss
+++ b/src/styles/contactForm.module.scss
@@ -10,7 +10,11 @@
 }
 
 @media only screen and (max-width: 600px) {
-    .form-content {
+    .form-item-layout {
+        flex-basis: 100%;
+    }
+
+    .contact-message {
         flex-basis: 100%;
     }
 }
