--- a/src/styles/portfolioItem.module.scss
+++ b/src/styles/portfolioItem.module.scss
@@ -4,3 +4,19 @@
 @media only screen and (max-width: 1100px) {
     
 }
+
+@media only screen and (max-width: 600px) {
+
+}
+
+.header-box {
+    width: 100vw;
+    height: 25vh;
+    background: $header-background-colour;
+}
+
+p {
+    span {
+        font-weight: bold;
+    }
+}
