--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,10 +2,12 @@
 $base-font-colour: black;
 $lighter-font-colour: white;
 $light-font-colour: #ccc;
+$footer-text-colour: #ddd;
 $background-colour: #052517;
 $light-background-colour: #e3fbe3;
 $font-highlight-colour: #008000;
 $header-background-colour: rgba(158, 156, 156, 0.8);
+$description-text-colour: rgba(0, 0, 0, .7);
 
 // Form
 $label-colour: rgba(225, 225, 225, 0.8);
@@ -13,7 +15,7 @@ $form-background-colour: rgba(0, 0, 0, 0.7);
 $error-colour: rgba(250, 110, 110, 0.9);
 $button-colour: rgba(240, 240, 240, 0.9);
 
-// Animation for onHover Elements
+// Animation for onHover elements
 $duration: 200ms;
 $distance: 8px;
 $easeOutBack: cubic-bezier(0.175, 0.885, 0.320, 1.275);
