--- a/src/styles/contactForm.module.scss
+++ b/src/styles/contactForm.module.scss
@@ -3,9 +3,13 @@
 
 @media only screen and (max-width: 1100px) {
     .contact-form-layout {
-        width: 100%;
+        width: 70vw !important;
         padding-left: .5em;
         padding-right: .5em;
+    }
+
+    .thank-you-message {
+        font-size: 0.75em !important;
     }
 }
 
